force-app/main/default/objects/Student_details__c/Student_details__c.object-meta.xml
<CustomObject>
    <label>Student details</label>
    <nameField>
        <label>Students Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>