force-app/main/default/objects/Student_details__c/fields/Active_user__c.field-meta.xml
<CustomField>
    <fullName>Active_user__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please choose this vale</inlineHelpText>
    <label>Active user?</label>
    <type>Checkbox</type>
</CustomField>