force-app/main/default/objects/Student_details__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>States__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Cities</valueSetName>
    </valueSet>
</CustomField>