force-app/main/default/objects/Student_details__c/fields/Living_country__c.field-meta.xml
<CustomField>
    <fullName>Living_country__c</fullName>
    <description>These are the states that can be selected by the students</description>
    <inlineHelpText>Please select the states; it is very urgent!</inlineHelpText>
    <label>Living country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>