force-app/main/default/objects/Student_details__c/fields/Subjects__c.field-meta.xml
<CustomField>
    <fullName>Subjects__c</fullName>
    <label>Subjects</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Active_user__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>biology</fullName>
            </value>
            <value>
                <fullName>chemistry</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>geography</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>Physics</fullName>
            </value>
            <value>
                <fullName>Sanskrit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>